[workspace]
members = ["crates/types"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
actix-web = "4.9"
tokio-tungstenite = "0.24"
bb8 = "0.8"
bb8-redis = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
futures = "0.3"
